fix video cutoff on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -81,11 +81,9 @@ body {
 }
 
 .purple-gradient {
-	background-image: linear-gradient(
-		0deg,
-		var(--purple-color),
-		#fff0
-	) !important;
+	background-image: linear-gradient(0deg,
+			var(--purple-color),
+			#fff0) !important;
 }
 
 a {
@@ -166,7 +164,7 @@ pre {
 	display: none;
 }
 
-.infobutton p + div > p {
+.infobutton p+div>p {
 	font-family: var(--serif-text);
 	font-size: 0.95em;
 	margin: 1em 0;
@@ -174,15 +172,15 @@ pre {
 	cursor: pointer;
 }
 
-.infobutton p + div > p a {
+.infobutton p+div>p a {
 	text-decoration: underline;
 }
 
-.infobutton p + div > p a:hover {
+.infobutton p+div>p a:hover {
 	color: var(--text-secondary);
 }
 
-.infobutton p + div > p a:active {
+.infobutton p+div>p a:active {
 	cursor: grabbing;
 	cursor: -moz-grabbing;
 	cursor: -webkit-grabbing;
@@ -203,10 +201,8 @@ a.dripsbtn img {
 
 a.dripsbtn img:hover,
 #offline span img:hover {
-	-webkit-filter: drop-shadow(4px 4px 4px var(--grey-color))
-		drop-shadow(-4px -4px 4px var(--grey-color));
-	filter: drop-shadow(4px 4px 4px var(--grey-color))
-		drop-shadow(-4px -4px 4px var(--grey-color));
+	-webkit-filter: drop-shadow(4px 4px 4px var(--grey-color)) drop-shadow(-4px -4px 4px var(--grey-color));
+	filter: drop-shadow(4px 4px 4px var(--grey-color)) drop-shadow(-4px -4px 4px var(--grey-color));
 	transition: linear 0.15s;
 }
 
@@ -216,7 +212,7 @@ a.dripsbtn img:hover::after {
 
 /* PREVIOUS BUTTON */
 
-div.infobutton + div.infobutton {
+div.infobutton+div.infobutton {
 	background-color: var(--lightblue-color);
 	margin-top: 4.75em;
 	writing-mode: vertical-rl;
@@ -227,7 +223,7 @@ div.infobutton + div.infobutton {
 	z-index: 2;
 }
 
-div.infobutton + div.infobutton:hover {
+div.infobutton+div.infobutton:hover {
 	transition: linear 0.15s;
 	box-shadow: rgb(18, 160, 255) 0px 3px 15px,
 		rgba(53, 174, 255, 0.838) -1px -1px 12px;
@@ -404,7 +400,7 @@ section h2,
 }
 
 /* FOOTER // NEXT */
-section + div.gradient {
+section+div.gradient {
 	background-image: linear-gradient(0deg, var(--darkgreen-color), #fff0);
 	width: 100vw;
 	height: 2em;
@@ -434,7 +430,7 @@ footer {
 	bottom: 0;
 }
 
-footer div + div {
+footer div+div {
 	height: 100%;
 	min-height: 120px;
 	width: 100vw;
@@ -485,11 +481,11 @@ footer div span {
 	font-size: 1.25em;
 }
 
-footer span + span {
+footer span+span {
 	border-top: 1px dashed var(--grey-color);
 }
 
-footer div + div span:last-of-type {
+footer div+div span:last-of-type {
 	margin-bottom: 2em;
 }
 
@@ -600,12 +596,12 @@ main.catelogue a h2:nth-of-type(4) {
 	margin-top: 0;
 }
 
-main.catelogue a + a {
+main.catelogue a+a {
 	border-top: 1px dashed var(--text-color);
 }
 
 @media (max-width: 960px) {
-	mux-player {
+	section mux-player {
 		width: 100%;
 	}
 
@@ -617,6 +613,7 @@ main.catelogue a + a {
 	#livelayout div#chat {
 		display: block;
 	}
+
 	#livelayout div#chat h2 {
 		background-color: var(--green-color);
 		border: 1px solid var(--text-color);
@@ -625,7 +622,8 @@ main.catelogue a + a {
 }
 
 /* MOBILE portrait */
-@media only screen and (orientation: portrait), screen and (max-width: 640px) {
+@media only screen and (orientation: portrait),
+screen and (max-width: 640px) {
 	#tlkio {
 		margin: 2em 0.5em 4em 0.5em;
 		width: inherit;
@@ -641,7 +639,7 @@ main.catelogue a + a {
 		display: none;
 	}
 
-	#offline span + img {
+	#offline span+img {
 		width: 100%;
 	}
 
@@ -653,7 +651,7 @@ main.catelogue a + a {
 		height: 1em;
 	}
 
-	div.infobutton + div.infobutton {
+	div.infobutton+div.infobutton {
 		margin: 1em 4em 0 0;
 		writing-mode: inherit;
 		text-orientation: initial;
@@ -693,7 +691,7 @@ main.catelogue a + a {
 		display: none;
 	}
 
-	#live h2 + img {
+	#live h2+img {
 		display: none;
 	}
 
@@ -725,8 +723,7 @@ main.catelogue a + a {
 	}
 
 	main.catelogue a h2:nth-child(4),
-	main.catelogue a h2:nth-child(5) {
-	}
+	main.catelogue a h2:nth-child(5) {}
 
 	main.catelogue a h2:nth-child(3) {
 		grid-row: 1;
@@ -744,8 +741,9 @@ main.catelogue a + a {
 
 /* MOBILE LANDSCAPE*/
 @media only screen and (max-height: 400px) and (orientation: landscape) {
+
 	div.infobutton,
-	div.infobutton + div.infobutton {
+	div.infobutton+div.infobutton {
 		display: none;
 	}
 
@@ -753,7 +751,7 @@ main.catelogue a + a {
 		min-height: 100vh;
 	}
 
-	section#offline span + img {
+	section#offline span+img {
 		display: none;
 	}
 
